; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/modules/snmp_wlan/extr_wlan_snmp.c_wlan_mesh_free_routes.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/modules/snmp_wlan/extr_wlan_snmp.c_wlan_mesh_free_routes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wlan_iface = type { i32 }
%struct.wlan_mesh_route = type { i32 }

@wr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wlan_iface*)* @wlan_mesh_free_routes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wlan_mesh_free_routes(%struct.wlan_iface* %0) #0 {
  %2 = alloca %struct.wlan_iface*, align 8
  %3 = alloca %struct.wlan_mesh_route*, align 8
  store %struct.wlan_iface* %0, %struct.wlan_iface** %2, align 8
  br label %4

4:                                                ; preds = %9, %1
  %5 = load %struct.wlan_iface*, %struct.wlan_iface** %2, align 8
  %6 = getelementptr inbounds %struct.wlan_iface, %struct.wlan_iface* %5, i32 0, i32 0
  %7 = call %struct.wlan_mesh_route* @SLIST_FIRST(i32* %6)
  store %struct.wlan_mesh_route* %7, %struct.wlan_mesh_route** %3, align 8
  %8 = icmp ne %struct.wlan_mesh_route* %7, null
  br i1 %8, label %9, label %16

9:                                                ; preds = %4
  %10 = load %struct.wlan_iface*, %struct.wlan_iface** %2, align 8
  %11 = getelementptr inbounds %struct.wlan_iface, %struct.wlan_iface* %10, i32 0, i32 0
  %12 = load i32, i32* @wr, align 4
  %13 = call i32 @SLIST_REMOVE_HEAD(i32* %11, i32 %12)
  %14 = load %struct.wlan_mesh_route*, %struct.wlan_mesh_route** %3, align 8
  %15 = call i32 @free(%struct.wlan_mesh_route* %14)
  br label %4

16:                                               ; preds = %4
  %17 = load %struct.wlan_iface*, %struct.wlan_iface** %2, align 8
  %18 = getelementptr inbounds %struct.wlan_iface, %struct.wlan_iface* %17, i32 0, i32 0
  %19 = call i32 @SLIST_INIT(i32* %18)
  ret void
}

declare dso_local %struct.wlan_mesh_route* @SLIST_FIRST(i32*) #1

declare dso_local i32 @SLIST_REMOVE_HEAD(i32*, i32) #1

declare dso_local i32 @free(%struct.wlan_mesh_route*) #1

declare dso_local i32 @SLIST_INIT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
